# Container-utilities

./: .clang-format  .gitignore  CMakeLists.txt  containerutils.h  enumerate.h  main.cpp  pipes.h  propagate_const.h  type_traits.h
tests/: helpers.h  tests_container_utils.cpp  tests_pipe.cpp  tests_pipe.h  tests_visitor.cpp
